Import of AMD/Tapper-TestSuite-Benchmark-Perl-Formance-3.000003 from CPAN.
gitpan-cpan-distribution: Tapper-TestSuite-Benchmark-Perl-Formance
gitpan-cpan-version:      3.000003
gitpan-cpan-path:         AMD/Tapper-TestSuite-Benchmark-Perl-Formance-3.000003.tar.gz
gitpan-cpan-author:       AMD
gitpan-cpan-maturity:     released

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,11 @@
 2011-11-22  Steffen Schwigon  <steffen.schwigon@amd.com>
 
+	* v3.0.3
+
+	* Bummer! Fix wrong pathname and missing metainfo.
+
+2011-11-22  Steffen Schwigon  <steffen.schwigon@amd.com>
+
 	* v3.0.2
 
 	* polishing:
