Import of AMD/Tapper-TestSuite-Benchmark-Perl-Formance-3.000004 from CPAN.
gitpan-cpan-distribution: Tapper-TestSuite-Benchmark-Perl-Formance
gitpan-cpan-version:      3.000004
gitpan-cpan-path:         AMD/Tapper-TestSuite-Benchmark-Perl-Formance-3.000004.tar.gz
gitpan-cpan-author:       AMD
gitpan-cpan-maturity:     released

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2012-01-01  Steffen Schwigon  <steffen.schwigon@amd.com>
+
+	* v3.0.4
+
+	* less verbose (because it might break TAP output)
+
 2011-11-22  Steffen Schwigon  <steffen.schwigon@amd.com>
 
 	* v3.0.3
