--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2012-01-02  Steffen Schwigon  <steffen.schwigon@amd.com>
+
+	* v3.0.5
+
+	* even less verbose, with extreme prejudice, *sigh*
+
 2012-01-01  Steffen Schwigon  <steffen.schwigon@amd.com>
 
 	* v3.0.4
