--- a/Changes
+++ b/Changes
@@ -1,3 +1,10 @@
+Revision history for Tapper-TestSuite-Benchmark-Perl-Formance
+
+4.0.1     2012-05-16
+        - verbosity
+        - use moreinfor-url
+        - big Dist::Zilla roundhouse kick
+
 2012-01-02  Steffen Schwigon  <steffen.schwigon@amd.com>
 
 	* v3.0.5
