Import of AMD/Tapper-TestSuite-Benchmark-Perl-Formance-4.0.2 from CPAN.
gitpan-cpan-distribution: Tapper-TestSuite-Benchmark-Perl-Formance
gitpan-cpan-version:      4.0.2
gitpan-cpan-path:         AMD/Tapper-TestSuite-Benchmark-Perl-Formance-4.0.2.tar.gz
gitpan-cpan-author:       AMD
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for Tapper-TestSuite-Benchmark-Perl-Formance
 
+4.0.2     2012-08-16
+        - fix script/ -> bin/
+
 4.0.1     2012-05-16
         - verbosity
         - use moreinfor-url
