--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for Tapper-TestSuite-Benchmark-Perl-Formance
 
+4.0.3     2012-09-04
+        - other plugins during test
+
 4.0.2     2012-08-16
         - fix script/ -> bin/
 
